mutants.out.old/log/src__convert.rs_line_19_col_5.log

*** src/convert.rs:19:5: replace encode_len -> usize with 0

*** mutation diff:
--- src/convert.rs
+++ replace encode_len -> usize with 0
@@ -11,17 +11,17 @@
 pub const fn binary_len(payload_len: usize) -> usize {
     1 + payload_len + 2
 }
 
 /// Calculates the base32 (no padding) encoded length for a given binary length.
 ///
 /// The formula is `ceil(binary_len * 8 / 5)`.
 pub const fn encode_len(binary_len: usize) -> usize {
-    (binary_len * 8 + 4) / 5
+    0 /* ~ changed by cargo-mutants ~ */
 }
 
 // Buffer sizes expected per strkey version:
 // +------------------------+-------------+------------+------------+
 // | Version                | Payload Len | Binary Len | Base32 Len |
 // +------------------------+-------------+------------+------------+
 // | PublicKeyEd25519       |          32 |         35 |         56 |
 // | PrivateKeyEd25519      |          32 |         35 |         56 |


*** /Users/leighmcculloch/.rustup/toolchains/stable-aarch64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=stellar-strkey@0.0.15
       Fresh libc v0.2.178
       Fresh cfg-if v1.0.4
       Fresh unicode-ident v1.0.22
       Fresh itoa v1.0.15
       Fresh memchr v2.7.6
       Fresh ryu v1.0.20
       Fresh bitflags v2.10.0
       Fresh getrandom v0.3.4
       Fresh proc-macro2 v1.0.103
       Fresh serde_core v1.0.228
       Fresh linux-raw-sys v0.11.0
       Fresh autocfg v1.5.0
       Fresh zerocopy v0.8.31
       Fresh once_cell v1.21.3
       Fresh byteorder v1.5.0
       Fresh fastrand v2.3.0
       Fresh wait-timeout v0.2.1
       Fresh quote v1.0.42
       Fresh serde v1.0.228
       Fresh serde_json v1.0.145
       Fresh rand_core v0.9.3
       Fresh rustix v1.1.2
       Fresh hash32 v0.3.1
       Fresh ppv-lite86 v0.2.21
       Fresh quick-error v1.2.3
       Fresh fnv v1.0.7
       Fresh syn v2.0.111
       Fresh tempfile v3.23.0
       Fresh bit-vec v0.8.0
       Fresh stable_deref_trait v1.2.1
       Fresh rand v0.9.2
       Fresh rand_xorshift v0.4.0
       Fresh rand_chacha v0.9.0
       Fresh unarray v0.1.4
       Fresh data-encoding v2.9.0
       Fresh regex-syntax v0.8.8
       Fresh serde_derive v1.0.228
       Fresh rusty-fork v0.3.1
       Fresh bit-set v0.8.0
       Fresh num-traits v0.2.19
       Fresh heapless v0.8.0
       Fresh lazy_static v1.5.0
       Fresh serde_test v1.0.177
       Fresh crate-git-revision v0.0.6
       Fresh proptest v1.8.0
       Dirty stellar-strkey v0.0.15 (/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp): the file `/index` is missing
   Compiling stellar-strkey v0.0.15 (/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp)
     Running `/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/build/stellar-strkey-7eeb440ac350857c/build-script-build`
     Running `/Users/leighmcculloch/.rustup/toolchains/stable-aarch64-unknown-linux-gnu/bin/rustc --crate-name stellar_strkey --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("cli", "default", "serde", "serde-decoded"))' -C metadata=1fdb956222ce4886 -C extra-filename=-b28c69b8deb9cca3 --out-dir /tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/deps --extern data_encoding=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/deps/libdata_encoding-2105313bbaf8090b.rlib --extern heapless=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/deps/libheapless-ace7dc37e88ebbbe.rlib --extern proptest=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/deps/libproptest-029c739a67ce9a84.rlib --extern serde_test=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/deps/libserde_test-1ab2fbb900abbf64.rlib`
     Running `/Users/leighmcculloch/.rustup/toolchains/stable-aarch64-unknown-linux-gnu/bin/rustc --crate-name stellar_strkey --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("cli", "default", "serde", "serde-decoded"))' -C metadata=5118e42c0f57517e -C extra-filename=-61edfdb3288b3b5e --out-dir /tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/deps --extern data_encoding=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/deps/libdata_encoding-2105313bbaf8090b.rmeta --extern heapless=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/deps/libheapless-ace7dc37e88ebbbe.rmeta`
warning: unused variable: `binary_len`
  --> src/convert.rs:18:25
   |
18 | pub const fn encode_len(binary_len: usize) -> usize {
   |                         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_binary_len`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error[E0080]: evaluation panicked: E must be at least ceil(B * 8 / 5) for base32 encoding
  --> src/convert.rs:58:9
   |
58 | /         assert!(
59 | |             E * 5 >= B * 8,
60 | |             "E must be at least ceil(B * 8 / 5) for base32 encoding"
61 | |         );
   | |_________^ evaluation of `convert::encode::<35, 0>::{constant#0}` failed here

note: erroneous constant encountered
  --> src/convert.rs:52:5
   |
52 | /     const {
53 | |         assert!(
54 | |             B >= 3,
55 | |             "B must be at least 3 (1 version + 0 payload + 2 checksum)"
...  |
61 | |         );
62 | |     }
   | |_____^

note: the above error was encountered while instantiating `fn encode::<35, 0>`
  --> src/ed25519.rs:40:9
   |
40 |         encode::<{ Self::BINARY_LEN }, { Self::ENCODED_LEN }>(version::PRIVATE_KEY_ED25519, &self.0)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: evaluation panicked: E must be at least ceil(B * 8 / 5) for base32 encoding
  --> src/convert.rs:58:9
   |
58 | /         assert!(
59 | |             E * 5 >= B * 8,
60 | |             "E must be at least ceil(B * 8 / 5) for base32 encoding"
61 | |         );
   | |_________^ evaluation of `convert::encode::<43, 0>::{constant#0}` failed here

note: the above error was encountered while instantiating `fn encode::<43, 0>`
   --> src/ed25519.rs:240:9
    |
240 | /         encode::<{ Self::BINARY_LEN }, { Self::ENCODED_LEN }>(
241 | |             version::MUXED_ACCOUNT_ED25519,
242 | |             &payload,
243 | |         )
    | |_________^

error[E0080]: evaluation panicked: E must be at least ceil(B * 8 / 5) for base32 encoding
  --> src/convert.rs:58:9
   |
58 | /         assert!(
59 | |             E * 5 >= B * 8,
60 | |             "E must be at least ceil(B * 8 / 5) for base32 encoding"
61 | |         );
   | |_________^ evaluation of `convert::encode::<103, 0>::{constant#0}` failed here

note: the above error was encountered while instantiating `fn encode::<103, 0>`
   --> src/ed25519.rs:373:9
    |
373 | /         encode::<{ Self::MAX_BINARY_LEN }, { Self::MAX_ENCODED_LEN }>(
374 | |             version::SIGNED_PAYLOAD_ED25519,
375 | |             &payload[..payload_len],
376 | |         )
    | |_________^

error[E0080]: evaluation panicked: E must be at least ceil(B * 8 / 5) for base32 encoding
  --> src/convert.rs:58:9
   |
58 | /         assert!(
59 | |             E * 5 >= B * 8,
60 | |             "E must be at least ceil(B * 8 / 5) for base32 encoding"
61 | |         );
   | |_________^ evaluation of `convert::encode::<36, 0>::{constant#0}` failed here

note: the above error was encountered while instantiating `fn encode::<36, 0>`
   --> src/strkey.rs:676:17
    |
676 | /                 encode::<{ Self::BINARY_LEN }, { Self::ENCODED_LEN }>(
677 | |                     version::CLAIMABLE_BALANCE,
678 | |                     &payload,
679 | |                 )
    | |_________________^

For more information about this error, try `rustc --explain E0080`.
warning: `stellar-strkey` (lib) generated 1 warning
error: could not compile `stellar-strkey` (lib) due to 4 previous errors; 1 warning emitted

Caused by:
  process didn't exit successfully: `/Users/leighmcculloch/.rustup/toolchains/stable-aarch64-unknown-linux-gnu/bin/rustc --crate-name stellar_strkey --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("cli", "default", "serde", "serde-decoded"))' -C metadata=5118e42c0f57517e -C extra-filename=-61edfdb3288b3b5e --out-dir /tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/deps --extern data_encoding=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/deps/libdata_encoding-2105313bbaf8090b.rmeta --extern heapless=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-InVdqJ.tmp/target/debug/deps/libheapless-ace7dc37e88ebbbe.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `stellar-strkey` (lib test) generated 1 warning (1 duplicate)

*** result: Failure(101)
